--- a/Sample2Client1/src/main/resources/config/clientMagnus.conf
+++ b/Sample2Client1/src/main/resources/config/clientMagnus.conf
@@ -14,10 +14,10 @@ locale_lang=en
 local_region=EN
 
 // CLUSTER CONFIGURATION
-//server_address0=http://192.168.1.213:8888/Sample2Server1/KFrameworkServerClassService?WSDL
-//server_address1=http://125.161.246.26:8040/Sample2Server1/KFrameworkServerClassService?WSDL
+server_address0=http://192.168.1.213:8888/Sample2Server1/KFrameworkServerClassService?WSDL
+server_address1=http://125.161.246.26:8040/Sample2Server1/KFrameworkServerClassService?WSDL
 
-server_address0=http://localhost:8888/Sample2Server1/KFrameworkServerClassService?WSDL
+//server_address0=http://localhost:8888/Sample2Server1/KFrameworkServerClassService?WSDL
 //server_address1=http://192.168.1.213:8888/Sample2Server1/KFrameworkServerClassService?WSDL
 //server_address2=http://125.161.246.26:8040/Sample2Server1/KFrameworkServerClassService?WSDL
 //server_address2=http://sea-6900076287:8080/Sample2Server1/KFrameworkServerClassService?WSDL
