Fix: 3.       Outstanding Order a.       Detail trx tidak ada yakni qty,comp,toleransi b.      itemid d delete saja c.       Tambahkan kolom status dimana kolom ini akan terisi NO PR jika outstandingnya sudah di PR

--- a/Sample2Client1/src/main/resources/config/clientMagnus.conf
+++ b/Sample2Client1/src/main/resources/config/clientMagnus.conf
@@ -17,6 +17,10 @@ local_region=EN
 //server_address0=http://192.168.1.213:8888/Sample2Server1/KFrameworkServerClassService?WSDL
 //server_address1=http://125.161.246.26:8040/Sample2Server1/KFrameworkServerClassService?WSDL
 
+// CLUSTER CONFIGURATION - PINTUMAS
+//server_address0=http://192.168.2.11:8888/Sample2Server1/KFrameworkServerClassService?WSDL
+//server_address1=http://118.96.42.138:8888/Sample2Server1/KFrameworkServerClassService?WSDL
+
 server_address0=http://localhost:8888/Sample2Server1/KFrameworkServerClassService?WSDL
 //server_address1=http://192.168.1.213:8888/Sample2Server1/KFrameworkServerClassService?WSDL
 //server_address2=http://125.161.246.26:8040/Sample2Server1/KFrameworkServerClassService?WSDL
