Fix: Bukti Terima Barang 1. Fix Delete Eror 2. Fix Print Report error 3. Tambahkan Kawasan dan Jenis Dok Pabean 4. Detail Item di buat Search Item

--- a/Sample2Client1/src/main/resources/config/clientMagnus.conf
+++ b/Sample2Client1/src/main/resources/config/clientMagnus.conf
@@ -17,11 +17,14 @@ local_region=EN
 //server_address0=http://192.168.1.213:8888/Sample2Server1/KFrameworkServerClassService?WSDL
 //server_address1=http://125.161.246.26:8888/Sample2Server1/KFrameworkServerClassService?WSDL
 
-// CLUSTER CONFIGURATION - PINTUMAS
-server_address0=http://192.168.2.11:8888/Sample2Server1/KFrameworkServerClassService?WSDL
-server_address1=http://118.96.42.138:8888/Sample2Server1/KFrameworkServerClassService?WSDL
+//server_address0=http://118.96.42.138:8888/Sample2Server1/KFrameworkServerClassService?WSDL
 
-//server_address0=http://localhost:8888/Sample2Server1/KFrameworkServerClassService?WSDL
+
+// CLUSTER CONFIGURATION - PINTUMAS
+//server_address0=http://192.168.2.11:8888/Sample2Server1/KFrameworkServerClassService?WSDL
+//server_address1=http://118.96.42.138:8888/Sample2Server1/KFrameworkServerClassService?WSDL
+
+server_address0=http://localhost:8888/Sample2Server1/KFrameworkServerClassService?WSDL
 //server_address1=http://192.168.1.213:8888/Sample2Server1/KFrameworkServerClassService?WSDL
 //server_address2=http://125.161.246.26:8040/Sample2Server1/KFrameworkServerClassService?WSDL
 //server_address2=http://sea-6900076287:8080/Sample2Server1/KFrameworkServerClassService?WSDL
@@ -71,8 +74,11 @@ double_click_timer=400
 // printer defaults
 PRINT_OUTPUT=PRINTER
 
-
-
-
+// Perusahaan
+per_nama = Pintu Mas Garmindo, PT
+per_alamat1 = Jl.Raya Dramarga Km-7 No.61
+per_alamat2 = Kab.Bogor Jawa Barat 16650
+per_telp = 021-12345
+per_fax = 021-54321
 
 
