Fix: Perabaiki PO dan updatetan Testing JasperReport

--- a/Sample2Client1/src/main/resources/config/clientMagnus.conf
+++ b/Sample2Client1/src/main/resources/config/clientMagnus.conf
@@ -13,6 +13,9 @@ KFRAMEWORK  (http://k-framework.sourceforge.net/)
 locale_lang=en
 local_region=EN
 
+//Database Koneksi untuk Report JasperReport
+jasper_jdbc = jdbc:oracle:thin:@localhost:1521:LIS
+
 // CLUSTER CONFIGURATION
 //server_address0=http://192.168.1.213:8888/Sample2Server1/KFrameworkServerClassService?WSDL
 //server_address1=http://125.161.246.26:8888/Sample2Server1/KFrameworkServerClassService?WSDL
