--- a/KFramework3Client/pom.xml
+++ b/KFramework3Client/pom.xml
@@ -170,8 +170,12 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
       <artifactId>jcalendar</artifactId>
       <version>1.3.2</version>
     </dependency>
-           
-    
+    <dependency>
+        <groupId>net.sf.jasperreports</groupId>
+        <artifactId>jasperreports</artifactId>
+      <version>5.2.0</version>
+      <type>jar</type>
+    </dependency>
 </dependencies>
 
   
