--- a/KFramework3Client/pom.xml
+++ b/KFramework3Client/pom.xml
@@ -176,6 +176,11 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
       <version>5.2.0</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+        <groupId>commons-collections</groupId>
+        <artifactId>commons-collections</artifactId>
+      <version>3.2.1</version>
+    </dependency>
 </dependencies>
 
   
