--- a/KFramework3Server/pom.xml
+++ b/KFramework3Server/pom.xml
@@ -93,7 +93,11 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
         <artifactId>openjpa</artifactId>
         <version>2.0.0</version>               
     </dependency>
-     
+    <dependency>
+        <groupId>commons-collections</groupId>
+        <artifactId>commons-collections</artifactId>
+      <version>3.2.1</version>
+    </dependency>
 </dependencies>  
   
 </project>
