--- a/Sample2Client1/pom.xml
+++ b/Sample2Client1/pom.xml
@@ -101,12 +101,19 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
       <artifactId>jasper-compiler-jdt</artifactId>
       <version>5.5.23</version>
     </dependency>
-    <dependency>
+    
+     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>KFramework3Base</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <!-- ORACLE database driver 
+     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>KFramework3Base</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc5</artifactId>
@@ -119,5 +126,10 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
       <version>0.9.0</version>
     </dependency>
        -->
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2.1</version>
+    </dependency>
   </dependencies>
 </project>
