Fix Bug dokument 4

--- a/Sample2Client1/src/main/resources/config/clientMagnus.conf
+++ b/Sample2Client1/src/main/resources/config/clientMagnus.conf
@@ -14,15 +14,15 @@ locale_lang=en
 local_region=EN
 
 //Database Koneksi untuk Report JasperReport
-jasper_jdbc = jdbc:oracle:thin:@localhost:1521:LIS
-//jasper_jdbc = jdbc:oracle:thin:@118.96.42.138:1521:XE
+//jasper_jdbc = jdbc:oracle:thin:@localhost:1521:XE
+jasper_jdbc = jdbc:oracle:thin:@118.96.42.138:1521:XE
 
-jasper_url = http://localhost:8080/Sample2Server1/
-//jasper_url = http://118.96.42.138:8888/Sample2Server1/
+//jasper_url = http://localhost:8080/Sample2Server1/
+jasper_url = http://118.96.42.138:8888/Sample2Server1/
 
 // CLUSTER CONFIGURATION - PINTUMAS
-server_address0=http://localhost:8080/Sample2Server1/KFrameworkServerClassService?WSDL
-//server_address0=http://118.96.42.138:8888/Sample2Server1/KFrameworkServerClassService?WSDL
+//server_address0=http://localhost:8080/Sample2Server1/KFrameworkServerClassService?WSDL
+server_address0=http://118.96.42.138:8888/Sample2Server1/KFrameworkServerClassService?WSDL
 
 // DATABASE DIALECT
 databaseType=oracle
